<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:layout_marginVertical="8dp"
    android:background="@drawable/grey_bg">

    <ImageView
        android:id="@+id/logoImg2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bitcoin" />

    <TextView
        android:id="@+id/cryptoNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/title"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/logoImg2"
        app:layout_constraintTop_toTopOf="@+id/logoImg2" />

    <TextView
        android:id="@+id/cryptoPriceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rm0"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/logoImg2"
        app:layout_constraintStart_toStartOf="@+id/cryptoNameTxt" />

    <TextView
        android:id="@+id/changePercentTxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_10"
        android:textColor="@color/green"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cryptoPriceTxt"
        app:layout_constraintStart_toEndOf="@+id/cryptoPriceTxt"
        app:layout_constraintTop_toTopOf="@+id/cryptoPriceTxt" />

    <com.majorik.sparklinelibrary.SparkLineLayout
        android:id="@+id/sparkLineLayout"
        android:layout_width="90dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/propertyAmountTxt"
        app:layout_constraintStart_toEndOf="@+id/changePercentTxt2"
        app:layout_constraintTop_toBottomOf="@+id/logoImg"
        app:s_line_color="#fed32c"
        app:s_line_thickness="2dp"
        app:s_marker_background_color="#fed32c"
        app:s_marker_width="8dp" />

    <TextView
        android:id="@+id/propertySizeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_0_15"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cryptoNameTxt" />

    <TextView
        android:id="@+id/propertyAmountTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rm_5"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/changePercentTxt2"
        app:layout_constraintEnd_toEndOf="@+id/propertySizeTxt"
        app:layout_constraintTop_toBottomOf="@+id/propertySizeTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>